--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,10 @@
 			<url>http://repo.springsource.org/release</url>
 		</repository>
 	</repositories>
-
+	
 	<properties>
 		<org.springframework-version>3.2.4.RELEASE</org.springframework-version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<dependencies>
